--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <title> My First Webpage</title>
   </head>
   <body>
+    <p> <a href="contact.html"> contact us</a> </p>
     <ul>
       <li>Fruits</li>
       <ul>
