--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Contact Us!</title>
     </head>
   <body>
+    <p> <a href="index.html"> Go to Homepage </a> </p>
     <p>Phone: 789-876-7654</p>
     </body>
 </html>
