--- a/03_02/index.html
+++ b/03_02/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en" dir="ltr">
 
   <head>
@@ -7,70 +6,22 @@
     <title>Best at Saffron</title>
   </head>
 
+
   <body>
+    <ul>
+      <li><a href="index.html">Home</li>
+      <li><a href="contact.html">Contact</li>
+      <li><a href="team.html">Team</li>
+      <li><a href="menu.html">Menu</li>
+      </ul>
+      <hr>
 
-    <p><strong>Home page</strong></p>
-
-    <p>We welcome you to our family owned and operated Indian Restaurant At Saffron, we
+    <p><strong>Home page</strong>
+      <br>
+      We welcome you to our family owned and operated Indian Restaurant At Saffron, we
       source the <strong>best ingredients and grind our own spices</strong> in house,
       which give our food a fresh and unique taste. Our hard work and our pure dedication
       shows in our great tasting restaurant. We open our hearts and doors for you and your family.</p>
-
-    <p>Menu</p>
-
-    <hr>
-
-    <table border="1">
-      <tr>
-        <td>Butter Chicken
-        <br>Tender chicken in rich creamy blend of tomato and aromatic spices.</td>
-        <td>$12.99</td>
-      </tr>
-
-      <tr>
-        <td>Shaie Paneer
-        <br>A wonderful alternative to butter chicken. The same creamy sauce with cubes of Indian cheese.A wonderful alternative to butter chicken. The same creamy sauce with cubes of Indian cheese.
-        </td>
-        <td>$11.99</td>
-      </tr>
-
-      <tr>
-         <td>Saag
-         <br>With your choice of chicken, lamb or paneer and spinach, broccoli & lentils simmered together with the most aromatic spices.</td>
-         <td>$9.99</td>
-       </tr>
-
-       <tr>
-         <td>Channa Masala
-          <br>
-          With your choice of chicken, lamb or paneer and spinach, broccoli & lentils simmered together with the most aromatic spices.
-          </td>
-          <td>$9.99</td>
-        </tr>
-
-       <tr>
-         <td>Mixed Vegetable Curry
-         </br>Chick peas simmered together with onions, tomatoes, ginger and garlic.
-         </td>
-         <td>$11.99</td>
-       </tr>
-
-       <tr>
-         <td><strong>Lamb Shank Currey</strong>
-         <br>This is for lamb lovers, lamb shank braised with onions, ginger, garlic and spices, served with rice and naan bread.
-         </td>
-        <td>$16.99</td>
-      </tr>
-</table>
-
-        <hr>
-
-        <p><strong>Our Team</strong>
-
-        <ul>
-          We are a family owned establishment and live on the Sunshine Coast. We have been here
-          since 1987. Our family of chefs and servers are happy to serve you!
-        </ul></p>
-
+<hr>
   </body>
 </html>
