--- a/index.html
+++ b/index.html
@@ -1,70 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <title>Best at Saffron</title>
   </head>
+
+
   <body>
-    <p><strong>Home page</strong></p>
-    <p>We welcome you to our family owned and operated Indian Restaurant At Saffron, we
+    <ul>
+      <li><a href="index.html">Home</li>
+      <li><a href="contact.html">Contact</li>
+      <li><a href="team.html">Team</li>
+      <li><a href="menu.html">Menu</li>
+      </ul>
+      <hr>
+
+    <p><strong>Home page</strong>
+      <br>
+      We welcome you to our family owned and operated Indian Restaurant At Saffron, we
       source the <strong>best ingredients and grind our own spices</strong> in house,
       which give our food a fresh and unique taste. Our hard work and our pure dedication
       shows in our great tasting restaurant. We open our hearts and doors for you and your family.</p>
-    <p>Menu</p>
-    <hr>
-    <table border="1">
-      <tr>
-        <td>Butter Chicken
-        <ul>Tender chicken in rich creamy blend of tomato and aromatic spices.</ul></td>
-        <td>$12.99</td>
-      </tr>
-      <tr>
-        <td>Shaie Paneer
-        <ul>A wonderful alternative to butter chicken. The same creamy sauce with
-        cubes of Indian cheese.A wonderful alternative to butter chicken.
-         The same creamy sauce with cubes of Indian cheese.
-        </ul></td>
-        <td>$11.99</td>
-      </tr>
-      <tr>
-
-         <td>Saag
-           <ul>
-             With your choice of chicken, lamb or paneer and spinach, broccoli & lentils
-             simmered together with the most aromatic spices. </ul></td>
-               <td>$9.99</td>
-             </tr>
-             <tr>
-         <td>Channa Masala
-        <ul>
-          With your choice of chicken, lamb or paneer and spinach, broccoli & lentils
-          simmered together with the most aromatic spices.
-        </ul></td>
-          <td>$9.99</td>
-        </tr>
-        <tr>
-         <td>Mixed Vegetable Curry
-         <ul>
-           Chick peas simmered together with onions, tomatoes, ginger and garlic.
-         </ul></td>
-         <td>$11.99</td>
-       </tr>
-         <tr>
-         <td><strong>Lamb Shank Currey</strong>
-         <ul>
-           This is for lamb lovers, lamb shank braised with onions,
-           ginger, garlic and spices, served with rice and naan bread.
-         </ul></td>
-        <td>$16.99</td>
-      </tr>
-</table>
-        <hr>
-        <p><strong>Our Team</strong>
-
-        <ul>
-          We are a family owned establishment and live on the Sunshine Coast. We have been here
-          since 1987. Our family of chefs and servers are happy to serve you!
-        </ul></p>
-
+<hr>
   </body>
 </html>
