--- a/index.html
+++ b/index.html
@@ -4,24 +4,32 @@
   <head>
     <meta charset="utf-8">
     <title>Best at Saffron</title>
+    <link rel="stylesheet" href="/css/master.css">
+    <link  href="./images/favicon.png" rel="icon" >
   </head>
 
 
   <body>
+    <header>
+      <h1>Saffron's Cuisine</h1>
+    </header>
+    <nav>
     <ul>
-      <li><a href="index.html">Home</li>
-      <li><a href="contact.html">Contact</li>
-      <li><a href="team.html">Team</li>
-      <li><a href="menu.html">Menu</li>
+      <li><a href="index.html">Home </a></li>
+      <li><a href="contact.html">Contact </a></li>
+      <li><a href="team.html">Team </a></li>
+      <li><a href="menu.html">Menu </a></li>
       </ul>
+      </nav>
       <hr>
-
+      <main>
     <p><strong>Home page</strong>
       <br>
       We welcome you to our family owned and operated Indian Restaurant At Saffron, we
       source the <strong>best ingredients and grind our own spices</strong> in house,
       which give our food a fresh and unique taste. Our hard work and our pure dedication
       shows in our great tasting restaurant. We open our hearts and doors for you and your family.</p>
+      </main>
 <hr>
   </body>
 </html>
