--- a/03_02/team.html
+++ b/03_02/team.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Our Team</title>
+    
   </head>
-  <body>
+   <body>
     <ul>
-      <li><a href="index.html">Home </a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="team.html">Team</a></li>
-      <li><a href="menu.html">Menu</a></li>
+      <li><a href="index.html">Home</li>
+      <li><a href="contact.html">Contact</li>
+      <li><a href="team.html">Team</li>
+      <li><a href="menu.html">Menu</li>
       </ul>
       <hr>
 
