--- a/menu.html
+++ b/menu.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <ul>
-          <li><a href="index.html">Home</li>
-          <li><a href="contact.html">Contact</li>
-          <li><a href="team.html">Team</li>
-          <li><a href="menu.html">Menu</li>
+          <li><a href="index.html">Home </a></li>
+          <li><a href="contact.html">Contact </a></li>
+          <li><a href="team.html">Team </a></li>
+          <li><a href="menu.html">Menu </a></li>
         </ul>
         <p>Menu</p>
 
