--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Best at Saffron</title>
     <link rel="stylesheet" href="/css/master.css">
-    <link  href="./images/favicon.png" rel="icon" >
+    <link  href="./images/favicon.jpeg" rel="icon" >
   </head>
 
 
