--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
     <header>
       <h1>Saffron's Cuisine</h1>
     </header>
-    <nav>
-    <ul>
-      <li><a href="index.html">Home </a></li>
-      <li><a href="contact.html">Contact </a></li>
-      <li><a href="team.html">Team </a></li>
-      <li><a href="menu.html">Menu </a></li>
-      </ul>
-      </nav>
       <hr>
       <main>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home </a></li>
+            <li><a href="menu.html">Menu </a></li>
+
+          </ul>
+        </nav>
     <p><strong>Home page</strong>
       <br>
       We welcome you to our family owned and operated Indian Restaurant At Saffron, we
@@ -31,5 +30,13 @@
       shows in our great tasting restaurant. We open our hearts and doors for you and your family.</p>
       </main>
 <hr>
+<footer>
+  <nav>
+  <ul>  
+        <li><a href="contact.html">Contact </a></li>
+        <li><a href="team.html">Team </a></li>
+      </ul>
+    </nav>
+</footer>
   </body>
 </html>
