--- a/menu.html
+++ b/menu.html
@@ -4,38 +4,38 @@
   <head>
     <meta charset="utf-8">
     <title>Menu</title>
+    <link rel="stylesheet" href="/css/master.css">
+    <link  href="./images/menu.jpeg" rel="icon" >
   </head>
   <body>
-    <ul>
-          <li><a href="index.html">Home </a></li>
-          <li><a href="contact.html">Contact </a></li>
-          <li><a href="team.html">Team </a></li>
-          <li><a href="menu.html">Menu </a></li>
-        </ul>
-        <p>Menu</p>
-
+    <header>
+      <h1>Menu</h1>
+    </header>
+      <main>
         <hr>
-
+        <nav>
+          <ul>
+            <li><a href="index.html">Home </a></li>
+            <li><a href="menu.html">Menu </a></li>
+          </ul>
+        </nav>
         <table border="1">
           <tr>
             <td>Butter Chicken
             <br>Tender chicken in rich creamy blend of tomato and aromatic spices.</td>
             <td>$12.99</td>
           </tr>
-
           <tr>
             <td>Shaie Paneer
             <br>A wonderful alternative to butter chicken. The same creamy sauce with cubes of Indian cheese.A wonderful alternative to butter chicken. The same creamy sauce with cubes of Indian cheese.
             </td>
             <td>$11.99</td>
           </tr>
-
           <tr>
              <td>Saag
              <br>With your choice of chicken, lamb or paneer and spinach, broccoli & lentils simmered together with the most aromatic spices.</td>
              <td>$9.99</td>
            </tr>
-
            <tr>
              <td>Channa Masala
               <br>
@@ -43,14 +43,12 @@
               </td>
               <td>$9.99</td>
             </tr>
-
            <tr>
              <td>Mixed Vegetable Curry
              <br>Chick peas simmered together with onions, tomatoes, ginger and garlic.</br>
              </td>
              <td>$11.99</td>
            </tr>
-
            <tr>
              <td><strong>Lamb Shank Currey</strong>
              <br>This is for lamb lovers, lamb shank braised with onions, ginger, garlic and spices, served with rice and naan bread.
@@ -58,7 +56,17 @@
             <td>$16.99</td>
           </tr>
     </table>
-
+  </main>
             <hr>
+            <footer>
+              <nav>
+              <ul>
+
+                    <li><a href="contact.html">Contact </a></li>
+                    <li><a href="team.html">Team </a></li>
+
+                  </ul>
+                </nav>
+            </footer>
   </body>
 </html>
