--- a/contact.html
+++ b/contact.html
@@ -3,23 +3,39 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Us</title>
+    <link rel="stylesheet" href="/css/master.css">
+    <link  href="./images/favicon.ico" rel="icon" >
   </head>
   <body>
-    <ul>
-      <li><a href="index.html">Home </a></li>
-      <li><a href="contact.html">Contact </a></li>
-      <li><a href="team.html">Team </a></li>
-      <li><a href="menu.html">Menu </a> </li>
-    </ul>
+    <header>
+      <h1>Conatct Us!</h1>
+    </header>
+
     <hr>
-    <h3>Contact Us</h3>
+    <main>
+      <nav>
+        <ul>
+  <li><a href="index.html">Home </a></li>
+          <li><a href="menu.html">Menu </a></li>
+        </ul>
+      </nav>
     <p>Address: <strong>59-5755 Cowrie St. Sechelt, BC V0N 3A0</strong>
     <br>
     Phone:<strong>604-740-0660</strong>
     <br>
     Restaurant Hours:<strong>Open Monday - Sunday 11:30AM-9 PM</strong>
     </p>
+    </main>
     <hr>
+    <footer>
+      <nav>
+      <ul>
+
+            <li><a href="contact.html">Contact </a></li>
+            <li><a href="team.html">Team </a></li>
+          </ul>
+        </nav>
+    </footer>
 
   </body>
 </html>
