--- a/team.html
+++ b/team.html
@@ -3,18 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Our Team</title>
+    <link rel="stylesheet" href="/css/master.css">
+    <link  href="./images/favicon.png" rel="icon" >
   </head>
   <body>
+    <header>
+      <h1>Our Team</h1>
+    </header>
+
+      <hr>
+<main>
+  <nav>
     <ul>
       <li><a href="index.html">Home </a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="team.html">Team</a></li>
-      <li><a href="menu.html">Menu</a></li>
-      </ul>
-      <hr>
-
+      <li><a href="menu.html">Menu </a></li>
+    </ul>
+  </nav>
 <p>We are a family owned establishment and live on the Sunshine Coast. We have been here since 1987. Our family of chefs and servers are happy to serve you!</p>
+</main>
 <hr>
-
+<footer>
+  <nav>
+  <ul>
+        <li><a href="contact.html">Contact </a></li>
+        <li><a href="team.html">Team </a></li>
+      </ul>
+    </nav>
+</footer>
   </body>
 </html>
