--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <header>
-      <h1>Saffron's Cuisine</h1>
+      <h1 style="color:blue;">Saffron's Cuisine</h1>
     </header>
       <hr>
       <main>
@@ -22,7 +22,7 @@
 
           </ul>
         </nav>
-    <p><strong>Home page</strong>
+    <p style="color:red;"><strong>Home page</strong>
       <br>
       We welcome you to our family owned and operated Indian Restaurant At Saffron, we
       source the <strong>best ingredients and grind our own spices</strong> in house,
@@ -30,9 +30,9 @@
       shows in our great tasting restaurant. We open our hearts and doors for you and your family.</p>
       </main>
 <hr>
-<footer>
+<footer style="color:darkgreen; font-size:11px;">
   <nav>
-  <ul>  
+  <ul>
         <li><a href="contact.html">Contact </a></li>
         <li><a href="team.html">Team </a></li>
       </ul>
