--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Conatct Us!</h1>
+      <h1 style="color:red;font-size: 12px;">Conatct Us!</h1>
     </header>
 
     <hr>
@@ -19,7 +19,7 @@
           <li><a href="menu.html">Menu </a></li>
         </ul>
       </nav>
-    <p>Address: <strong>59-5755 Cowrie St. Sechelt, BC V0N 3A0</strong>
+    <p style="color:blue;">Address: <strong>59-5755 Cowrie St. Sechelt, BC V0N 3A0</strong>
     <br>
     Phone:<strong>604-740-0660</strong>
     <br>
@@ -27,7 +27,7 @@
     </p>
     </main>
     <hr>
-    <footer>
+    <footer style="color:lightgreen; font-size: 12px;">
       <nav>
       <ul>
 
