--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Menu</h1>
+      <h1 style="color:green;">Menu</h1>
     </header>
       <main>
         <hr>
@@ -58,7 +58,7 @@
     </table>
   </main>
             <hr>
-            <footer>
+            <footer style=color:pink; font-size:13px;>
               <nav>
               <ul>
 
