--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Our Team</h1>
+      <h1 style="color:crimson;">Our Team</h1>
     </header>
 
       <hr>
@@ -19,10 +19,10 @@
       <li><a href="menu.html">Menu </a></li>
     </ul>
   </nav>
-<p>We are a family owned establishment and live on the Sunshine Coast. We have been here since 1987. Our family of chefs and servers are happy to serve you!</p>
+<p style="color:skyblue;">We are a family owned establishment and live on the Sunshine Coast. We have been here since 1987. Our family of chefs and servers are happy to serve you!</p>
 </main>
 <hr>
-<footer>
+<footer style="color:darkblue; font-size:13px;">
   <nav>
   <ul>
         <li><a href="contact.html">Contact </a></li>
