--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
 
-  <body style="color-background:black;">
+  <body style="background-color:black;">
     <header>
       <h1 style="color:blue;">Saffron's Cuisine</h1>
     </header>
