--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Best at Saffron</title>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link  href="./images/favicon.jpeg" rel="icon" >
   </head>
 
