--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="css/style.css">
     <link  href="./images/favicon.ico" rel="icon" >
   </head>
   <body>
