--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Menu</title>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="css/style.css">
     <link  href="./images/menu.jpeg" rel="icon" >
   </head>
   <body>
