--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Our Team</title>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link  href="./images/favicon.png" rel="icon" >
   </head>
   <body>
