--- a/contact.html
+++ b/contact.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
+
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link  href="./images/favicon.ico" rel="icon" >
-  </head>
+
+<head>
+  <title>Contact Saffron</title>
+  <link rel= "stylesheet" href="css/style.css">
+  <link href="./images/favicon.jpeg" rel="icon">
+</head>
+
   <body>
-    <header>
-      <h1 style="color:red;font-size: 12px;">Conatct Us!</h1>
-    </header>
-
-    <hr>
-    <main>
-      <nav>
-        <ul>
-  <li><a href="index.html">Home </a></li>
-          <li><a href="menu.html">Menu </a></li>
-        </ul>
-      </nav>
-    <p style="color:blue;">Address: <strong>59-5755 Cowrie St. Sechelt, BC V0N 3A0</strong>
-    <br>
-    Phone:<strong>604-740-0660</strong>
-    <br>
-    Restaurant Hours:<strong>Open Monday - Sunday 11:30AM-9 PM</strong>
-    </p>
-    </main>
-    <hr>
-    <footer style="color:lightgreen; font-size: 12px;">
-      <nav>
+    <section>
+    <nav>
       <ul>
+        <li><a href="index.html">Home</li></a>
+        <li><a href="contact.html">Contact</li></a>
+        <li><a href="team.html">Team</li></a>
+        <li><a href="menu.html">Menu</li></a>
+      </ul>
+    </nav>
+    </section>
 
-            <li><a href="contact.html">Contact </a></li>
-            <li><a href="team.html">Team </a></li>
-          </ul>
-        </nav>
+    <main>
+      <section>
+    <h1>Contact Us</h1>
+
+      <p>
+        <strong>Address: </strong> #59-5755 Cowrie St. Sechelt, BC V0N 3A0 (Outside Trail Bay Mall)
+        <br>
+        <strong> Phone: </strong> 604-740-0660
+        <br>
+        <strong> Restaurant Hours: </strong> Open Monday - Sunday 11:30 am - 9 pm
+      </p>
+    </section>
+    </main>
+
+    <footer>
+      <section>
+      <p>Author: Samrat Bhusal</p>
+      <p><a href="mailto:s.bhusal@student.fdu.edu">s.bhusal@student.fdu.edu</a></p>
+    </section>
     </footer>
 
   </body>
+
 </html>
