--- a/index.html
+++ b/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
+
 <html lang="en" dir="ltr">
 
   <head>
-    <meta charset="utf-8">
     <title>Best at Saffron</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link  href="./images/favicon.jpeg" rel="icon" >
+    <link rel= "stylesheet" href="./css/style.css">
+    <link href="./images/favicon.jpeg" rel="icon">
   </head>
 
-
-  <body style="background-color:black;">
-    <header>
-      <h1 style="color:blue;">Saffron's Cuisine</h1>
-    </header>
-      <hr>
-      <main>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home </a></li>
-            <li><a href="menu.html">Menu </a></li>
-
-          </ul>
-        </nav>
-    <p style="color:red;"><strong>Home page</strong>
-      <br>
-      We welcome you to our family owned and operated Indian Restaurant At Saffron, we
-      source the <strong>best ingredients and grind our own spices</strong> in house,
-      which give our food a fresh and unique taste. Our hard work and our pure dedication
-      shows in our great tasting restaurant. We open our hearts and doors for you and your family.</p>
-      </main>
-<hr>
-<footer style="color:darkgreen; font-size:11px;">
-  <nav>
-  <ul>
-        <li><a href="contact.html">Contact </a></li>
-        <li><a href="team.html">Team </a></li>
+  <body>
+    <section>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</li></a>
+        <li><a href="contact.html">Contact</li></a>
+        <li><a href="team.html">Team</li></a>
+        <li><a href="menu.html">Menu</li></a>
       </ul>
     </nav>
-</footer>
+    </section>
+
+    <main>
+      <section>
+      <h1 style="color:Yellow;">Home page</h1>
+
+      <p>
+        We welcome you to our family owned and operated Indian Restaurant. At Saffron, we source the <strong>best ingredients and grind our own spices </strong> in house, which give our food a <strong> fresh and unique taste.</strong> Our hard work and our pure dedication shows in our <strong> great tasting food and positive service. </strong> At Saffron, we pride ourselves as <strong> a true family friendly restaurant. </strong> We open our hearts and doors for you and your family.
+      </p>
+      </section>
+    </main>
+
+    <section>
+    <footer style="font-weight:lighter;">
+      <p>Author: Samrat Bhusal</p>
+      <p><a href="mailto:s.bhusal@student.fdu.edu">s.bhusal@student.fdu.edu</a></p>
+
+    </footer>
+    </section>
+
   </body>
+
 </html>
