--- a/team.html
+++ b/team.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Our Team</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link  href="./images/favicon.png" rel="icon" >
-  </head>
-  <body>
-    <header>
-      <h1 style="color:crimson;">Our Team</h1>
-    </header>
 
-      <hr>
-<main>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home </a></li>
-      <li><a href="menu.html">Menu </a></li>
-    </ul>
-  </nav>
-<p style="color:skyblue;">We are a family owned establishment and live on the Sunshine Coast. We have been here since 1987. Our family of chefs and servers are happy to serve you!</p>
-</main>
-<hr>
-<footer style="color:darkblue; font-size:13px;">
-  <nav>
-  <ul>
-        <li><a href="contact.html">Contact </a></li>
-        <li><a href="team.html">Team </a></li>
+<html lang="en" dir="ltr">
+
+<head>
+  <title>Team at Saffron</title>
+  <link rel= "stylesheet" href="css/style.css">
+  <link href="./images/favicon.jpeg" rel="icon">
+</head>
+
+  <body>
+    <section>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</li></a>
+        <li><a href="contact.html">Contact</li></a>
+        <li><a href="team.html">Team</li></a>
+        <li><a href="menu.html">Menu</li></a>
       </ul>
     </nav>
-</footer>
+  </section>
+
+    <main>
+      <section>
+      <h1>Our Team</h1>
+
+      <p>We are a family owned establishment and live on the Sunshine Coast. We have been here since 1987. Our family of chefs and servers are happy to serve you!</p>
+    </section>
+    </main>
+    <section>
+    <footer>
+      <p>Author: Samrat Bhusal</p>
+      <p><a href="mailto:s.bhusal@student.fdu.edu">s.bhusal@student.fdu.edu</a></p>
+    </footer>
+  </section>
   </body>
+
 </html>
