--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
       <section>
-      <h1 style="color:Yellow;">Home page</h1>
+      <h1>Home page</h1>
 
       <p>
         We welcome you to our family owned and operated Indian Restaurant. At Saffron, we source the <strong>best ingredients and grind our own spices </strong> in house, which give our food a <strong> fresh and unique taste.</strong> Our hard work and our pure dedication shows in our <strong> great tasting food and positive service. </strong> At Saffron, we pride ourselves as <strong> a true family friendly restaurant. </strong> We open our hearts and doors for you and your family.
