--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="contact.html">Contact</li></a>
         <li><a href="team.html">Team</li></a>
         <li><a href="menu.html">Menu</li></a>
+        <li><a href="float.html">Float</li></a>
       </ul>
     </nav>
     </section>
