--- a/cat.html
+++ b/cat.html
@@ -2,9 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+<header>
+  <h1>lets practise positions</h1>
+</header>
   </head>
   <body>
-
+<nav>
+  </nav>
+  <main>
+    <img class="cat" src="images/cat.jpeg">
+    </main>
+    <footer>
+    Author: Samrat Bhusal</footer>
   </body>
 </html>
