--- a/cat.html
+++ b/cat.html
@@ -12,7 +12,7 @@
   <main>
     <img class="cat" src="images/cat.jpeg">
     </main>
-    <footer>
+    <footer class="fixed">
     Author: Samrat Bhusal</footer>
   </body>
 </html>
