--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="team.html">Team</li></a>
         <li><a href="menu.html">Menu</li></a>
         <li><a href="float.html">Float</li></a>
+        <li><a href="cat.html"><Positining></li>
       </ul>
     </nav>
     </section>
