--- a/cat.html
+++ b/cat.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
 <header>
   <h1>lets practise positions</h1>
 </header>
