--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="team.html">Team</li></a>
         <li><a href="menu.html">Menu</li></a>
         <li><a href="float.html">Float</li></a>
-        <li><a href="cat.html"><Positining></li>
+        <li><a href="cat.html">Positioning</li>
       </ul>
     </nav>
     </section>
