--- a/Site/index.html
+++ b/Site/index.html
@@ -5,7 +5,7 @@
   <head>
     <title>Best at Saffron</title>
     <link rel= "stylesheet" href="./css/style.css">
-    <link href="./images/favicon.jpeg" rel="icon">
+    <link href="images/favicon.jpeg" rel="icon">
   </head>
 
   <body>
@@ -18,6 +18,7 @@
         <li><a href="menu.html">Menu</li></a>
         <li><a href="float.html">Float</li></a>
         <li><a href="cat.html">Positioning</li>
+          <li><a href="Flex/flex.html">Flex</li>
       </ul>
     </nav>
     </section>
