--- a/index.html
+++ b/index.html
@@ -1,46 +1,35 @@
 <!DOCTYPE html>
-
-<html lang="en" dir="ltr">
-
+<html>
   <head>
-    <title>Best at Saffron</title>
-    <link rel= "stylesheet" href="./css/style.css">
-    <link href="images/favicon.jpeg" rel="icon">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Strait Coffee</title>
   </head>
 
   <body>
-    <section>
-    <nav>
+    <header>
+      <img src="images/logo.png" >
+      <h1> Strait Coffee</h1>
+    </header>
+
+    <nav class="navigation">
       <ul>
-        <li><a href="index.html">Home</li></a>
-        <li><a href="contact.html">Contact</li></a>
-        <li><a href="team.html">Team</li></a>
-        <li><a href="menu.html">Menu</li></a>
-        <li><a href="float.html">Float</li></a>
-        <li><a href="cat.html">Positioning</li>
-          <li><a href="Flex/flex.html">Flex</li>
+        <li><a href="index.html">HOME </a></li>
+        <li><a href="#">CONTACT</a></li>
+        <li><a href="#">MENU</a></li>
       </ul>
     </nav>
-    </section>
+    <main class="flex_container" >
+      <div >
+        <img class - "bodyImage" src="images/barista.jpg">
+      </div>
 
-    <main>
-      <section>
-      <h1>Home page</h1>
-
-      <p>
-        We welcome you to our family owned and operated Indian Restaurant. At Saffron, we source the <strong>best ingredients and grind our own spices </strong> in house, which give our food a <strong> fresh and unique taste.</strong> Our hard work and our pure dedication shows in our <strong> great tasting food and positive service. </strong> At Saffron, we pride ourselves as <strong> a true family friendly restaurant. </strong> We open our hearts and doors for you and your family.
-      </p>
-      </section>
+      <div >
+        <p>Once upon a time in 1996 we opened a small café and roastery. After many years of serving our fine coffees from around the world...we grew out of our small space and we realized we needed more room with which to bake, and cook and serve our many loyal and new customers.</p>
+        <p>After a few diversions, illusions and contusions, we acquired our larger space on the corner of Wilson Creek Plaza. Our café features all the coffees that we roast. We serve amazing fresh, made to order food, and delicious baked goods, made from scratch.</p>
+      </div>
     </main>
 
-    <section>
-    <footer style="font-weight:lighter;">
-      <p>Author: Samrat Bhusal</p>
-      <p><a href="mailto:s.bhusal@student.fdu.edu">s.bhusal@student.fdu.edu</a></p>
-
-    </footer>
-    </section>
-
+    <footer>Created by Yin Maung</footer>
   </body>
 
 </html>
