--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Strait Coffee - welcome</title>
     <link rel="stylesheet" href="css/style.css">
-    <title>Strait Coffee</title>
+    <link href="images/favicon.png" rel="icon">
   </head>
-
   <body>
     <header>
-      <img src="images/logo.png" >
-      <h1> Strait Coffee</h1>
-    </header>
-
-    <nav class="navigation">
+      <img src="images/logo.png" alt="Strait Coffee logo">
+      <h1>Strait Coffee</h1>
+    <header>
+    <nav>
       <ul>
-        <li><a href="index.html">HOME </a></li>
-        <li><a href="#">CONTACT</a></li>
-        <li><a href="#">MENU</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="contact.html">contact</a></li>
+          <li><a href="menu.html">menu</a></li>
       </ul>
     </nav>
-    <main class="flex_container" >
-      <div >
-        <img class - "bodyImage" src="images/barista.jpg">
-      </div>
 
-      <div >
+    <main>
+      <section>
+        <figure><img class="featureimg" src="images/barista.jpg" alt="barista pouring coffee"></figure>
+      </section>
+      <section>
         <p>Once upon a time in 1996 we opened a small café and roastery. After many years of serving our fine coffees from around the world...we grew out of our small space and we realized we needed more room with which to bake, and cook and serve our many loyal and new customers.</p>
         <p>After a few diversions, illusions and contusions, we acquired our larger space on the corner of Wilson Creek Plaza. Our café features all the coffees that we roast. We serve amazing fresh, made to order food, and delicious baked goods, made from scratch.</p>
-      </div>
+      </section>
     </main>
-
-    <footer>Created by Yin Maung</footer>
+      <footer>
+        <p>Created by Samrat Bhusal</p>
+      </footer>
   </body>
-
 </html>
