--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <label for="lastname">Lastname</label><br>
             <input type="text" name="lastname" id="lastname" placeholder="Your last name.."><br>
 
-            <p>Which is your favourate store in town?</p>
+            <p>Which is your favourate store in town?</p><br>
             <input type="radio" name="favouritestore" id="Vancouver"><br>
             <label for="Vancouver">Vancouver</label><br>
 
@@ -63,7 +63,7 @@
 
     </main>
       <footer>
-        <p>Created by Samrat Bhusal</p>
+        <p>Created by Yin Muang</p>
       </footer>
 
   </body>
