--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </section>
     </main>
       <footer>
-        <p>Created by Samrat Bhusal</p>
+        <p>Created by Yin Muang</p>
       </footer>
   </body>
 </html>
