--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
       </section>
     </main>
       <footer>
-        <p>Created by Samrat Bhusal</p>
+        <p>Created by Yin Muang</p>
       </footer>
   </body>
 </html>
