--- a/contact.html
+++ b/contact.html
@@ -22,27 +22,40 @@
     <main>
 
       <section>
-        <form class="form">
+        <form class="Queries">
             <p>Drop us a line and send us a questions!</p>
-
+            <br>
             <label for="firstname">First Name</label><br>
-            <input type="text" name="firstname" id="firstname" placeholder="Your name.."><br>
-            <label for="lastname">Lastname</label><br>
-            <input type="text" name="lastname" id="lastname" placeholder="Your last name.."><br>
+            <input type="text" name="firstname" id="firstname" placeholder="Your name..">
+            <br>
+            <label for="lastname">Lastname</label>
+            <br>
+            <input type="text" name="lastname" id="lastname" placeholder="Your last name..">
+            <br>
 
-            <p>Which is your favourate store in town?</p><br>
-            <input type="radio" name="favouritestore" id="Vancouver"><br>
-            <label for="Vancouver">Vancouver</label><br>
+            <p>Which is your favourate store in town?</p>
+            <br>
+            <input type="radio" name="favouritestore" id="Vancouver">
+            <br>
+            <label for="Vancouver">Vancouver</label>
+            <br>
 
-            <input type="radio" name="favouritestore" id="Surrey"><br>
-            <label for="Surrey">Surrey</label><br>
-            <input type="radio" name="favouritestore" value="Richmond"><br>
-            <label for="Richmond">Richmond</label><br>
+            <input type="radio" name="favouritestore" id="Surrey">
+            <br>
+            <label for="Surrey">Surrey</label>
+            <br>
+            <input type="radio" name="favouritestore" value="Richmond">
+            <br>
+            <label for="Richmond">Richmond</label>
+            <br>
 
-            <label for="Questions">Questions</label><br>
-            <input type="text" name="Questions" placeholder="Tell us about it.."><br>
+            <label for="Questions">Questions</label>
+            <br>
+            <input type="text" name="Questions" placeholder="Tell us about it..">
+            <br>
 
-            <button type="submit" name="Submit">Submit</button><br>
+            <button type="submit" name="Submit">Submit</button>
+            <br>
         </form>
       </section>
 
