--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </nav>
 
     <main>
-      <section>
-        <figure><img class="featureimg" src="images/barista.jpg" alt="barista pouring coffee"></figure>
+      <section class="enlarge">
+        <figure><img class="mainimg" src="images/barista.jpg" alt="barista pouring coffee"></figure>
       </section>
       <section>
         <p>Once upon a time in 1996 we opened a small café and roastery. After many years of serving our fine coffees from around the world...we grew out of our small space and we realized we needed more room with which to bake, and cook and serve our many loyal and new customers.</p>
