--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
   <head>
     <title>Strait Coffee - welcome</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/favicon.ico">
   </head>
   <body>
     <header>
@@ -19,18 +19,18 @@
     </nav>
 
     <main>
-      <section>
-        <figure><img class="featureimg" src="images/espresso.jpg" alt="barista pouring espresso shot"></figure>
+      <section class="blackandwhite" >
+        <figure><img class="mainimg" src="images/espresso.jpg" alt="espresso shot"></figure>
       </section>
-      <section>
-        <figure><img class="featureimg" src="images/mocha.jpg" alt="barista pouring mocha coffee"></figure>
+      <section class="blackandwhite">
+        <figure><img class="mainimg" src="images/mocha.jpg" alt="mocha coffee"></figure>
       </section>
-      <section >
-        <figure><img class="featureimg" src="images/cap.jpg" alt="barista pouring a cup of coffee"></figure>
+      <section class="blackandwhite">
+        <figure><img class="mainimg" src="images/cap.jpg" alt=" cup of coffee"></figure>
       </section>
     </main>
       <footer>
-        <p>Created by Yin Muang</p>
+        <p>Created by Yin Maung</p>
       </footer>
   </body>
 </html>
