--- a/contact.html
+++ b/contact.html
@@ -36,22 +36,19 @@
             <p>Which is your favourate store in town?</p>
             <br>
             <input type="radio" name="favouritestore" id="Vancouver">
-            <br>
             <label for="Vancouver">Vancouver</label>
             <br>
-
             <input type="radio" name="favouritestore" id="Surrey">
-            <br>
             <label for="Surrey">Surrey</label>
             <br>
             <input type="radio" name="favouritestore" value="Richmond">
-            <br>
             <label for="Richmond">Richmond</label>
-            <br>
-
+          <br>
+          <br>
             <label for="Questions">Questions</label>
             <br>
-            <input type="text" name="Questions" placeholder="Tell us about it..">
+
+            <textarea name="Tell us about it.." rows="8" cols="80">Tell us about it...</textarea>
             <br>
 
             <button type="submit" name="Submit">Submit</button>
